# frenzy

./: .env  Cargo.toml  README.md
migrations/: 20260701050223_init_schema.sql
src/: .state.rs.kate-swp  config.rs  errors.rs  main.rs
src/handlers/: audit.rs  auth.rs  memberships.rs  mod.rs  organizations.rs  permissions.rs  roles.rs  sessions.rs  users.rs
src/middleware/: auth.rs
src/models/: models.rs
src/repositories/: rbac.rs
src/services/: jwt.rs
