[package]
name = "frenzy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "full"] }
tower-http = { version = "0.7", features = ["trace", "cors", "request-id", "util", "catch-panic"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros"
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "2"
anyhow = "1"
jsonwebtoken = "9"

argon2 = "0.5.3" 
rand = "0.8.5"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
